test_regress/t/t_interface_modport_dir_bad.out
%Error: t/t_interface_modport_dir_bad.v:52:25: Port connection 'ctrl' expected 'source' interface modport on pin connection but got 'sink' modport.
                                             : ... note: In instance 't.source_i'
   52 |    sourceMod source_i (.ctrl);
      |                         ^~~~
%Error: Exiting due to
